Fix alignment of provenance and system information buttons.

--- a/vault/static/vault/css/vault.css
+++ b/vault/static/vault/css/vault.css
@@ -27,11 +27,6 @@ ol.breadcrumb li.active {
     display: none;
 }
 
-.top-info-buttons {
-    padding-top: 20px;
-    text-align: right;
-}
-
 .top-info-buttons .research,
 .top-info-buttons .vault
 {
